--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,10 @@ ipykernel = "*"
 black = "*"
 scipy = "*"
 xgboost = "*"
+tensorflow = "*"
+keras = "*"
+torch = "*"
+tqdm = "*"
 
 [dev-packages]
 
